[package]
name = "my_function"
version = "0.1.0"
authors = ["muhammadarsalanmirza <marsalan485@gmail.com>"]
edition = "2018"
description = "my first library"
license ="MIT"
repository ="https://github.com/muhammadarsalanmirza/My_Rust_Library"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
